[project]
name = "ai-net-tuner"
version = "0.1.0"
description = "AI-assisted traffic forecasting and human-approved Linux network sysctl tuning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.optional-dependencies]
ml = [
  "scikit-learn>=1.4",
]
slm = [
  "transformers>=4.51",
  "accelerate>=0.30",
  "torch>=2.3",
]

[project.scripts]
ai-net-tuner = "ai_net_tuner.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_net_tuner"]
